# Ven

./: Cargo.toml  LICENSE.md  README.md  SELL.md  SYNTAX.md  _  a.asm  a.out  bmac.sh  build.sh  c.ven  push.sh  runtime.asm  runtime_fixed.asm  runtime_interpolation.asm  runtime_interpolation.ven  runtime_test  runtime_test.asm  simple_test.asm  simple_test.ven  test  test.asm  test.c  test.rs  test.ven  test_interpolation.asm  test_interpolation.ven  test_interpolation_result.asm  tst.asm  tst.ven
_/: genrm.sh
src/: errmsgs.rs  errs.rs  impl_parserstate.rs  main.rs  mkasm.rs  parse.rs  parse1.rs  parse2.rs  repl.rs  token.rs  types.rs  var_checker.rs
test_results/: test_all_comparisons_c_output.txt  test_all_comparisons_llvm_output.txt  test_basic_c_output.txt  test_basic_llvm_output.txt  test_basic_rust_output.txt  test_complex_c_output.txt  test_complex_expressions_c_output.txt  test_complex_expressions_llvm_output.txt  test_complex_expressions_rust_output.txt  test_complex_llvm_output.txt  test_complex_lx8664_output.txt  test_complex_rust_output.txt  test_error_handling_c_output.txt  test_error_handling_llvm_output.txt  test_error_handling_rust_output.txt  test_if_equal_c_output.txt  test_if_equal_llvm_output.txt  test_if_greater_c_output.txt  test_if_greater_llvm_output.txt  test_if_greater_lx8664_output.txt  test_if_less_equal_c_output.txt  test_if_less_equal_llvm_output.txt  test_if_less_equal_lx8664_output.txt  test_input_c_output.txt  test_input_llvm_output.txt  test_input_rust_output.txt  test_logical_and_c_output.txt  test_logical_and_llvm_output.txt  (+16 more)
(+17 files in other folders)
